--- a/pull data from api with javascript/5 Canlı Döviz Kuru Nasıl Çekilir/style.css
+++ b/pull data from api with javascript/5 Canlı Döviz Kuru Nasıl Çekilir/style.css
@@ -17,8 +17,21 @@ body{
 }
 .container .row .card{
     box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 150px;
+    border-radius: 20px;
 }
-
+.card h1{
+    color: #444;
+    font-size: 70px;
+}
+.card h1 span{
+    font-size: 20px;
+    color: #444;
+}
 
 
 
