--- a/pull data from api with javascript/7 Country Guide App/style.css
+++ b/pull data from api with javascript/7 Country Guide App/style.css
@@ -2,10 +2,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
 body {
-  background-color: #3d64e8;
+  background-color: #3d64e6;
 }
 .container {
   background-color: #ffffff;
@@ -13,59 +13,74 @@ body {
   max-width: 37.5em;
   padding: 3em 2.5em;
   position: absolute;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   top: 50%;
-  left:50%;
+  left: 50%;
   border-radius: 0.62em;
   box-shadow: 0 1.25em 1.8em rgba(8, 21, 65, 0.25);
 }
-.search-wrapper{
-  /* display: grid;
-  grid-template-columns: 9fr 3fr; */
-  display: flex;
-  text-align: center;
-  justify-content: space-between;
+.search-wrapper {
+  display: grid;
+  grid-template-columns: 9fr 3fr;
+  gap: 1.25em;
 }
-.search-wrapper button{
+.search-wrapper button {
   font-size: 1em;
   background-color: #3d64e6;
-  padding: 1em 1.8em ;
+  color: #ffffff;
+  padding: 0.8em 0;
   border: none;
-  border-radius: 2.5em;
-  cursor: pointer;
+  border-radius: 1.5em;
 }
-
-.search-wrapper input{
-  font-size: 1.1rem;
-  padding: 0 5em;
+.search-wrapper input {
+  font-size: 1em;
+  padding: 0 0.62em;
   border: none;
   border-bottom: 2px solid #3d64e6;
   outline: none;
   color: #222a43;
 }
-#result{
+#result {
   margin-top: 1.25em;
 }
-.container .flag-img{
+.container .flag-img {
   display: block;
   width: 45%;
   min-width: 7.5em;
   margin: 1.8em auto 1.2em auto;
 }
+/* .container h2 {
+  font-weight: 600;
+  color: #222a43;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 1.8em;
+} */
+.container h2{
+  font-weight: 600;
+  color: #222a43;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 1.8em;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
+.data-wrapper {
+  margin-bottom: 1em;
+  letter-spacing: 0.3px;
+}
+.container h4 {
+  display: inline;
+  font-weight: 500;
+  color: #222a43;
+}
+.container span {
+  color: #5d6274;
+}
+.container h3 {
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: 400;
+  color: #ff465a;
+}
