--- a/pull data from api with javascript/7 replay/style.css
+++ b/pull data from api with javascript/7 replay/style.css
@@ -49,12 +49,33 @@ body{
   min-width: 7.5em;
   margin: 1.8em auto 1.2em auto
 }
+.container h2{
+    font-weight: 600;
+    color: #222a43;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 1.8em;
+}
+.data-wrapper{
+    margin-bottom: 1em;
+    letter-spacing: 0.3px;
+}
+.container h4{
+    display: inline;
+    font-weight: 500;
+    color: #222a43;
+}
 
-
-
-
-
-
+.container span{
+    color: #5d6274;
+}
+.container h3{
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: 400;
+    color: #ff465a;   
+}
 
 
 
